k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: content-blocks
  labels:
    name: content-blocks
    environment: production
